--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -6,14 +6,16 @@
 }
 
 .logo-header {
-    width: 150px;
-    height: 150px;
+    max-width: 120px;
+    width: 100%;
+    height: auto;
     margin-left: 10px;
 }
 
 header {
     background-color: #d8d8d8d7;
 }
+
 
 .menu {
     list-style: none;
@@ -26,44 +28,75 @@ header {
 
 .footer {
     background-color: #c0c0c0e0;
+    font-family: "Poppins", sans-serif;
+    padding: 30px 0;
+}
+
+.footer-title {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 0;
+    color: #ffffff;
+    margin-bottom: 1rem;
+}
+
+.footer-list {
+    list-style: none;
+    margin-bottom: 1rem;
+    padding: 0;
+}
+
+.footer-link {
+    font-size: 12px;
+    font-weight: 400;
+    color: #ffffff;
+    text-decoration: none;
+    margin: 1rem;
+    padding: 0;
 }
 
 .logo-footer {
-    width: 150px;
+    max-width: 100%;
+}
+
+.logo-footer-img {
+    height: 150px;
+    padding: 0;
 }
 
 .iconos-footer-img {
-    height: 60px;
+    height: 30px;
 }
 
-.iconos-img {
-    height: 100px;
+
+.contenido {
+    margin: 1rem;
+    padding: 1rem;
 }
+
 
 .titulo-principal {
     font-family: "Poppins", sans-serif;
     font-weight: 800;
-    font-size: 50px;
-    margin-top: 20px;
-    margin-left: 20px;
-    padding: 10px;
+    font-size: 40px;
+    padding: 1rem;
+    text-align: left;
 }
 
 .slogan {
     font-family: "Poppins", sans-serif;
     font-weight: 700;
     font-size: 30px;
-    margin-top: 20px;
-    margin-left: 20px;
-    padding: 10px
+    padding: 1rem;
+    text-align: left;
 }
 
 .pitch {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-size: 28px;
-    margin-left: 20px;
-    padding: 10px;
+    padding: 1rem;
+    text-align: left;
 }
 
 .subtitulo {
@@ -103,45 +136,82 @@ header {
     padding: 10px
 }
 
+.iconos-inspirate-img {
+    height: 100px;
+    max-width: 100%;
+}
+
 .listado {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
-    font-size: auto;
+    font-size: 20px;
     text-align: left;
     margin-top: 25px;
     margin-left: 15px;
-    padding: 10px
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.listado-item {
+    margin-bottom: 2rem;
 }
 
 .imagen-portada {
-    max-width: 600px;
-    margin-top: 20px;
-    margin-left: 15px;
-    margin-right: 5px;
-    padding: 10px;
+    max-width: 100%;
+    margin-top: 35px;
 }
 
-.imagen-lateral {
-    margin-top: 20px;
-    margin-left: 15px;
-    margin-right: 15px;
-    padding: 10px;
+
+.imagen-organizzate {
+    max-width: 100%;
+    margin-top: 40px;
 }
 
 .imagen-servicio {
-    max-height:700px;
+    max-height: 700px;
     margin-top: 20px;
     margin-left: 15px;
     margin-right: 10px;
     padding: 10px;
 }
 
-.agenda-button {
+.agendar-asesoria {
     font-family: "Poppins", sans-serif;
     font-weight: 600;
-    font-size: 28px;
-    margin-left: 25px;
-    margin-top: 10px;
+    font-size: 25px;
+    margin: 1rem 1rem 2rem 2rem;
+    padding: 1rem;
+    align-self: center;
+}
+
+@media (max-width: 830px) {
+    .agendar-asesoria {
+        font-size: 20px;
+    }
+
+    .titulo-principal {
+        font-size: 35px;
+    }
+
+    .slogan {
+        font-size: 25px;
+    }
+
+    .pitch {
+        font-size: 23px;
+    }
+
+    .subtitulo {
+        font-size: 25px;
+    }
+
+    .texto {
+        font-size: 17px;
+    }
+
+    .listado {
+        font-size: 17px;
+    }
 }
 
 .agendar {
