--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -14,7 +14,9 @@
 
 header {
     background-color: #d8d8d8d7;
+    background-image: linear-gradient(#c9c9c9d7, #fffefefb);
 }
+
 
 
 .menu {
@@ -28,12 +30,13 @@ header {
 
 .footer {
     background-color: #c0c0c0e0;
+    background-image: linear-gradient(to top, #858585e0, #dddddde0);
     font-family: "Poppins", sans-serif;
     padding: 30px 0;
 }
 
 .footer-title {
-    font-size: 14px;
+    font-size: 17px;
     font-weight: 600;
     padding: 0;
     color: #ffffff;
@@ -42,16 +45,15 @@ header {
 
 .footer-list {
     list-style: none;
-    margin-bottom: 1rem;
+    margin: 0;
     padding: 0;
 }
 
 .footer-link {
-    font-size: 12px;
+    font-size: 16px;
     font-weight: 400;
     color: #ffffff;
     text-decoration: none;
-    margin: 1rem;
     padding: 0;
 }
 
@@ -60,14 +62,18 @@ header {
 }
 
 .logo-footer-img {
-    height: 150px;
+    height: 170px;
     padding: 0;
 }
 
 .iconos-footer-img {
-    height: 30px;
+    height: 50px;
+    margin: 0;
 }
 
+.border-card {
+    border-color: #666666d7;
+}
 
 .contenido {
     margin: 1rem;
@@ -156,25 +162,6 @@ header {
     margin-bottom: 2rem;
 }
 
-.imagen-portada {
-    max-width: 100%;
-    margin-top: 35px;
-}
-
-
-.imagen-organizzate {
-    max-width: 100%;
-    margin-top: 40px;
-}
-
-.imagen-servicio {
-    max-height: 700px;
-    margin-top: 20px;
-    margin-left: 15px;
-    margin-right: 10px;
-    padding: 10px;
-}
-
 .agendar-asesoria {
     font-family: "Poppins", sans-serif;
     font-weight: 600;
@@ -187,6 +174,10 @@ header {
 @media (max-width: 830px) {
     .agendar-asesoria {
         font-size: 20px;
+    }
+
+    .agendar {
+        font-size: 18px;
     }
 
     .titulo-principal {
@@ -203,6 +194,14 @@ header {
 
     .subtitulo {
         font-size: 25px;
+    }
+
+    .apartado {
+        font-size: 23px;
+    }
+
+    .subapartado {
+        font-size: 20px;
     }
 
     .texto {
@@ -226,9 +225,9 @@ header {
 .enviar {
     font-family: "Poppins", sans-serif;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 18px;
     margin-left: 25px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 20px;
     padding: 10px;
 }
@@ -236,19 +235,20 @@ header {
 label {
     font-family: "Poppins", sans-serif;
     font-weight: 450;
-    font-size: 14px;
+    font-size: 17px;
     padding: 10px;
 }
 
 .formulario {
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    font-weight:400;
     margin-top: 15px;
     margin-left: 15px;
     margin-right: 15px;
     padding: 10px;
-}
-
-.contacto {
-    text-align: left;
+    border-radius: 100;
+    border: #666666d7;
 }
 
 .info-contacto {
@@ -257,3 +257,23 @@ label {
     margin-bottom: 20px;
 
 }
+
+.subapartado-contacto {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 22px;
+    padding: 10px;
+}
+
+.texto-contacto {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    text-align: left;
+}
+
+.icono-contacto {
+    max-height: 5rem;
+    margin-right: 10px;
+    align-content: left;
+    }
