--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -35,18 +35,27 @@ header {
     padding: 30px 0;
 }
 
+.footer-disclaimer {
+    font-size: 16px;
+    font-weight: 400;
+    padding: 1rem;
+    color: #ffffff;
+}
+
 .footer-title {
     font-size: 17px;
     font-weight: 600;
-    padding: 0;
     color: #ffffff;
     margin-bottom: 1rem;
+    margin-top: 2rem;
+    text-decoration: none;
 }
 
 .footer-list {
     list-style: none;
     margin: 0;
     padding: 0;
+    color: #ffffff;
 }
 
 .footer-link {
@@ -57,13 +66,19 @@ header {
     padding: 0;
 }
 
-.logo-footer {
+/* .logo-footer {
     max-width: 100%;
-}
+} */
 
 .logo-footer-img {
     height: 170px;
     padding: 0;
+    max-width: 100%;
+}
+
+.iconos-footer {
+    height: 160px;
+    color: white;
 }
 
 .iconos-footer-img {
