--- a/scss/_pageinicio.scss
+++ b/scss/_pageinicio.scss
@@ -21,8 +21,8 @@ div {
 
         .pitch {
             @extend .titulo-principal;
-            @include negrita-ocho;
-            
+            @include apartado;
+
         }
     }
 
