--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,9 +9,34 @@ $espacio-contenido: (
     padding-uno: 1rem,
 );
 
-@mixin negrita-ocho {
+@mixin subtitulo {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 30px;
+}
+
+@mixin subapartado {
+    font-family: $tipografia;
+    font-weight: 500;
+    font-size: 24px;
+}
+
+@mixin texto {
+    font-family: $tipografia;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+@mixin apartado {
+    font-family: $tipografia;
     font-size: 28px;
     font-weight: 550;
+}
+
+@mixin boton-agendar-ver {
+    font-family: $tipografia;
+    font-weight: 600;
+    font-size: 20px;
 }
 
 * {
