--- a/scss/_pagecontacto.scss
+++ b/scss/_pagecontacto.scss
@@ -5,18 +5,14 @@
 
 div {
     div {
-        .subtitulo {
-            font-family: $tipografia;
-            font-weight: 600;
-            font-size: 30px;
-            margin-top: 20px;
-            margin-left: 15px;
+        .subtitulo-contacto {
+            @include subtitulo;
+            margin: 20px;
             padding: $padding-diez;
         }
 
-        .apartado {
-            font-family: $tipografia;
-            @include negrita-ocho;
+        .apartado-contacto {
+            @include apartado;
             margin-top: 15px;
             margin-left: 15px;
             padding: $padding-diez;
@@ -26,78 +22,54 @@ div {
 }
 
 div {
-    div {
-        .subapartado {
-            font-family: $tipografia;
-            font-weight: 500;
-            font-size: 24px;
-            margin-top: 15px;
-            margin-left: 15px;
-            margin-right: 15px;
-            padding: $padding-diez;
-        }
-
-        .texto {
-            font-family: $tipografia;
-            font-weight: 400;
-            font-size: 20px;
-            margin-top: 10px;
-            margin-left: 15px;
-            margin-right: 15px;
-            padding: $padding-diez;
-        }
-    }
-}
-
-.formulario {
-    @extend .subapartado;
-    font-size: 16px;
-    font-weight: 400;
-
-    div {
-
-        label {
-            @extend .subapartado;
-            font-weight: 450;
-            font-size: 17px;
-        }
-    }
-
-    div {
-        .enviar {
-            font-family: $tipografia;
-            font-weight: 600;
-            font-size: 18px;
-            margin-left: 25px;
-            margin-top: 20px;
-            margin-bottom: 20px;
-            padding: 15px;
-        }
-    }
-}
-
-div {
-    .border-card {
-        border-color: $borde-gris;
+    .formulario {
+        font-family: $tipografia;
+        margin-left: 15px;
+        margin-top: 15px;
+        font-size: 18px;
+        font-weight: 400;
+        padding: $padding-diez;
 
         div {
-            .subapartado-contacto {
-                @extend .subapartado;
-                font-size: 22px;
+            label {
+                @extend .formulario;
+                margin-left: 5px;
+                font-weight: 450;
+                font-size: 17px;
             }
+        }
 
-            .texto-contacto {
-                @extend .texto;
+        div {
+            .enviar {
+                font-family: $tipografia;
+                font-weight: 600;
                 font-size: 18px;
-                text-align: left;
+                margin-left: 25px;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                padding: 15px;
             }
+        }
+    }
+}
 
-            .icono-contacto {
-                max-height: 5rem;
-                margin-left: 10px;
-                margin-right: 10px;
-                align-content: left;
-            }
+div {
+    .subapartado-contacto {
+        @include subapartado;
+        font-size: 22px;
+        margin: 10px;
+        padding: $padding-diez;
+    }
+
+    .texto-contacto {
+        @extend .subapartado-contacto;
+        font-size: 18px;
+        font-weight: 400;
+
+        .icono-contacto {
+            max-height: 5rem;
+            margin-left: 5px;
+            margin-right: 10px;
         }
     }
 }
