--- a/scss/_pageinspirate.scss
+++ b/scss/_pageinspirate.scss
@@ -4,19 +4,15 @@
 }
 
 div {
-    .subtitulo {
-        font-family: $tipografia;
-        font-weight: 600;
-        font-size: 30px;
+    .subtitulo-inspirate {
+        @include subtitulo;
         margin-top: 20px;
         margin-left: 15px;
         padding: $padding-diez
     }
 
-    .subapartado {
-        font-family: $tipografia;
-        font-weight: 500;
-        font-size: 24px;
+    .subapartado-inspirate {
+        @include subapartado;
         margin-top: 15px;
         margin-left: 15px;
         margin-right: 15px;
@@ -29,34 +25,28 @@ div {
         border-color: $borde-gris;
 
         div {
-
-
             .iconos-inspirate-img {
                 height: 100px;
                 max-width: 100%;
             }
 
-            .apartado {
-                font-family: $tipografia;
-                @include negrita-ocho;
+            .apartado-inspirate {
+                @include apartado;
                 margin-top: 15px;
                 margin-left: 15px;
                 padding: $padding-diez;
             }
 
-            .texto {
-                font-family: $tipografia;
-                font-weight: 400;
-                font-size: 20px;
+            .texto-inspirate {
+                @include texto;
+                font-size: 22px;
                 margin-top: 10px;
                 margin-left: 15px;
                 padding: $padding-diez;
             }
 
-            .agendar {
-                font-family: $tipografia;
-                font-weight: 600;
-                font-size: 20px;
+            .ver-inspirate {
+                @include boton-agendar-ver;
                 margin-top: 10px;
                 margin-bottom: 20px;
             }
