--- a/scss/_pageservicios.scss
+++ b/scss/_pageservicios.scss
@@ -4,22 +4,16 @@
 }
 
 div {
-    .subtitulo {
-        font-family: $tipografia;
-        font-weight: 600;
-        font-size: 30px;
+    .subtitulo-servicios {
+        @include subtitulo;
         margin-top: 20px;
         margin-left: 15px;
         padding: $padding-diez;
     }
 
-    .subapartado {
-        font-family: $tipografia;
-        font-weight: 500;
-        font-size: 24px;
-        margin-top: 15px;
-        margin-left: 15px;
-        margin-right: 15px;
+    .subapartado-servicios {
+        @include subapartado;
+        margin: 15px;
         padding: $padding-diez;
     }
 }
@@ -29,27 +23,22 @@ div {
         border-color: $borde-gris;
 
         div {
-            .apartado {
-                font-family: $tipografia;
-                @include negrita-ocho;
+            .apartado-servicios {
+                @include apartado;
                 margin-top: 15px;
                 margin-left: 15px;
                 padding: $padding-diez;
             }
 
-            .texto {
-                font-family: $tipografia;
-                font-weight: 400;
-                font-size: 20px;
+            .texto-servicios {
+                @include texto;
                 margin-top: 10px;
                 margin-left: 15px;
                 padding: $padding-diez;
             }
 
-            .agendar {
-                font-family: $tipografia;
-                font-weight: 600;
-                font-size: 20px;
+            .agendar-servicios {
+                @include boton-agendar-ver;
                 margin-top: 10px;
                 margin-bottom: 20px;
             }
